Fix includes in StrongInlines.h and ScriptValue.h https://bugs.webkit.org/show_bug.cgi?id=84659

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

* heap/StrongInlines.h: Include JSGlobalData.h, since JSGlobalData's
definiition is required here.

Source/WebCore:

This change was prompted by an attempt to use ScriptValue.h from a
WebCore header file and running into trouble with the (as it turns out
unnecessary) include of JSDOMBinding.h.

* bindings/js/ScriptValue.cpp: Add include of JSDOMBinding.h, now that
it's not included by the header.
* bindings/js/ScriptValue.h: Remove unnecessary include of JSDOMBinding.h.


Canonical link: https://commits.webkit.org/102221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115061 268f45cc-cd09-0410-ab3c-d52691b4dbfc